Update .gitignore to exclude dataset and history.json

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ snapshots/
 # =============================
 dataset/
 
+# =============================
+# History / cache files
+# =============================
+history.json
+
